# Automate_Nmap_Scanning

./: .gitignore  Nmap_Response_Analysis_Classification.py  Nmap_Response_Analysis_Classification_LLM_Decision.py  Nmap_Response_Analysis_Classification_Restricted.py  README.md  main.py  nmap_response_analysis.py
automator-client/src/automator_client/: app.py  constants.py
nmap-automator/: pyproject.toml
nmap-automator/config/: config.yaml
nmap-automator/src/nmap_automator/: runner.py
nmap-automator/src/nmap_automator/config_loader/: __init__.py  config.py
nmap-automator/src/nmap_automator/interpretor/: base_interpretor.py  gpt_based_interpretor.py
nmap-automator/src/nmap_automator/interpretors/: __init__.py  base_interpretor.py  gemini_based_interpretor.py  gpt_based_interpretor.py  interpretor_factory.py  llama3_interpretor.py  ollama_interpretor.py  prompts.py
nmap-automator/src/nmap_automator/scanner/: nmap_scanner.py
nmap-automator/src/nmap_automator/server/: api_server.py
nmap-automator/src/nmap_automator/utils/: api_utils.py
